# hf-polarimetry

./: .gitignore  INSTALL.md  LICENSE  README.md
examples/: make_example_capture.py
picoacq/: README.md  pyproject.toml
picoacq/docs/: picoacq_user_manual.tex
picoacq/picoacq/: __init__.py  alias.py  cli.py  ps5444a.py  recorder.py  simulator.py
reports/: .gitignore
reports/qt_locus/: qt_locus_report.tex  qt_table_fc_midnight.tex  qt_table_fc_noon.tex  qt_table_taipei_midnight.tex  qt_table_taipei_noon.tex
reports/qt_pair/: qt_pair_report.tex  tucson_to_boulder.csv
three_loop_array/: three_loop_array_report.tex
three_loop_array/code/: draw_geometry.py  three_loop.py  visualize_sim.py
tools/: BODNAR_LBE1425_PROTOCOL.md  README.md  bodnar_cli.py  bodnar_gui.py  predict_phase.py  predict_phase_batch.py  predict_phase_explore.py
triloop/: README.md  plot_snr_hemisphere.py  plot_snr_vs_azimuth.py  pyproject.toml  render_demo_figures.py
triloop/docs/: triloop_analysis_ref.tex  triloop_user_manual.tex
triloop/notebooks/: triloop_analysis.ipynb
triloop/tests/: test_direction_finding.py  test_simulated_recovery.py
triloop/triloop/: __init__.py  analyze.py  bands.py  beamform.py  browse.py  cli.py  config.py  direction.py  extract.py  geometry.py  io_hdf5.py  magnetoionic.py  multiband.py  stokes.py  view.py
